--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color:#61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +35,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Router-link{
+  padding: 0px 10px 0px 10px;   
+}
+
+.Heading-label{
+  color:#337ab7;
+  font-size:xx-large;
+}
+
+.Err-msg{
+  color:#dc3545
 }
